test/golden/error.index-out-of-bounds.golden
Runtime error: index out of bounds: 100
  ./test/golden/error.index-out-of-bounds.jsonnet:3:10-17 