test/golden/error.index-out-of-bounds.jsonnet
local arr = [1, 2, 3];

arr[0] + arr[100]
